# backend/routes/commentRoutes.js
@@ -4,13 +4,15 @@ const {
   addComment,
   getAllComments,
   getCommentsByRecipe,
+  updateComment,
   deleteComment,
 } = require("../controllers/commentController");
 const { protect } = require("../middlewares/authMiddleware");
 
-router.post("/:postId", protect, addComment);
-router.get("/:postId", getCommentsByRecipe);
+router.post("/:recipeId", protect, addComment);
+router.get("/:recipeId", getCommentsByRecipe);
 router.get("/", getAllComments);
+router.put("/:commentId", protect, updateComment);
 router.delete("/:commentId", protect, deleteComment);
 
 module.exports = router;
